--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,6 +12,9 @@
   max-width: 1000px;
   margin: 0 auto;
   width: 100%;
+  @media (max-width: 1024px) {
+    padding: 80px 0px 0px;
+  }
 }
 section {
   scroll-margin-top: 60px;
@@ -20,9 +23,9 @@ section {
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   background-color: #f7f7f7;
-  color: #222;
   line-height: 1.6;
   padding: 0 10px;
+  color: #222;
 }
 
 .second-card-container {
@@ -568,6 +571,8 @@ body {
       span {
         margin-left: 5px;
         user-select: none;
+        align-items: center;
+        display: flex;
       }
 
       a {
@@ -602,7 +607,7 @@ body {
       gap: 5px;
 
       .contact-item {
-        font-size: 12px;
+        font-size: 10px;
       }
     }
   }
