--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -39,18 +39,24 @@ body {
 .second-card-container {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   box-shadow: 0 6px 16px rgba(0, 0, 0, 0.08);
+  transition: max-height 0.6s ease;
   justify-content: space-between;
+  flex-direction: column;
   align-items: center;
   border-radius: 16px;
-  background: #fff;
   padding: 20px 30px;
   margin-top: 24px;
   flex-wrap: wrap;
   display: flex;
   height: auto;
+  width: 100%;
 }
 .second-card-container .second-card-title {
-  width: 30%;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  display: flex;
+  width: 100%;
 }
 .second-card-container .second-card-title h2 {
   font-size: 1.4rem;
@@ -58,27 +64,32 @@ body {
   color: #222;
 }
 .second-card-container .second-card-title p {
-  text-align: justify;
+  text-align: center;
   font-size: 0.9rem;
   color: #666;
   width: 90%;
 }
 .second-card-container .second-card-body {
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   padding: 15px 15px;
   flex-wrap: wrap;
   display: flex;
-  width: 70%;
+  width: 100%;
 }
 .second-card-container .second-card-body .second-card {
-  transition: transform 0.3s ease;
+  transition: all 0.8s ease;
+  transform: translateY(0);
   align-items: center;
   position: relative;
   margin-right: 15px;
   margin-left: 15px;
+  margin-top: 20px;
+  padding: 0.5rem;
   display: flex;
   width: 270px;
+  height: auto;
+  opacity: 1;
 }
 .second-card-container .second-card-body .second-card::before {
   border-left: 2px solid rgba(27, 125, 178, 0.7098039216);
@@ -136,6 +147,29 @@ body {
   line-height: 1.3;
   color: #666;
 }
+.second-card-container .second-card-body .second-card.hidden {
+  transform: translateY(-10px);
+  transition: all 0.8s ease;
+  pointer-events: none;
+  overflow: hidden;
+  opacity: 0;
+  padding: 0;
+  margin: 0;
+  height: 0;
+}
+.second-card-container .btn {
+  transition: background-color 0.3s ease;
+  background-color: #005fa3;
+  border-radius: 6px;
+  padding: 10px 20px;
+  color: #f7f7f7;
+  font-size: 1rem;
+  cursor: pointer;
+  border: none;
+}
+.second-card-container .btn:hover {
+  background-color: rgba(0, 119, 204, 0.7098039216);
+}
 @media (max-width: 1200px) {
   .second-card-container {
     flex-direction: column;
@@ -161,7 +195,6 @@ body {
   .second-card-container .second-card-body {
     justify-content: center;
     width: 100%;
-    gap: 15px;
   }
   .second-card-container .second-card-body .second-card .second-img {
     height: 90px;
@@ -196,10 +229,10 @@ body {
   transition: background-color 0.3s ease;
 }
 .experience-section .experience-card .experience-image i {
+  transition: color 0.3s ease;
   width: 28px;
   height: 28px;
   color: #0077cc;
-  transition: color 0.3s ease;
 }
 .experience-section .experience-card .experience-image:hover {
   background: rgba(0, 119, 204, 0.1450980392);
@@ -506,8 +539,8 @@ body {
   flex-direction: column;
   text-decoration: none;
   align-items: center;
-  user-select: none;
   margin: 10px 5px 0;
+  user-select: none;
   color: #222;
   display: flex;
 }
@@ -529,6 +562,7 @@ body {
   text-decoration: none;
   align-items: center;
   user-select: none;
+  font-size: 15px;
   color: #222;
   display: flex;
 }
