--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -21,7 +21,6 @@
 section {
   scroll-margin-top: 60px;
 }
-
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   background-color: #f7f7f7;
@@ -32,25 +31,31 @@ body {
 .second-card-container {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   box-shadow: 0 6px 16px rgba(0, 0, 0, 0.08);
+  transition: max-height 0.6s ease;
   justify-content: space-between;
+  flex-direction: column;
   align-items: center;
   border-radius: 16px;
-  background: #fff;
   padding: 20px 30px;
   margin-top: 24px;
   flex-wrap: wrap;
   display: flex;
   height: auto;
+  width: 100%;
 
   .second-card-title {
-    width: 30%;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    display: flex;
+    width: 100%;
     h2 {
       font-size: 1.4rem;
       font-weight: 700;
       color: #222;
     }
     p {
-      text-align: justify;
+      text-align: center;
       font-size: 0.9rem;
       color: #666;
       width: 90%;
@@ -58,21 +63,26 @@ body {
   }
 
   .second-card-body {
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     padding: 15px 15px;
     flex-wrap: wrap;
     display: flex;
-    width: 70%;
+    width: 100%;
 
     .second-card {
-      transition: transform 0.3s ease;
+      transition: all 0.8s ease;
+      transform: translateY(0);
       align-items: center;
       position: relative;
       margin-right: 15px;
       margin-left: 15px;
+      margin-top: 20px;
+      padding: 0.5rem;
       display: flex;
       width: 270px;
+      height: auto;
+      opacity: 1;
 
       &::before {
         border-left: 2px solid #1b7db2b5;
@@ -143,6 +153,29 @@ body {
         }
       }
     }
+    .second-card.hidden {
+      transform: translateY(-10px);
+      transition: all 0.8s ease;
+      pointer-events: none;
+      overflow: hidden;
+      opacity: 0;
+      padding: 0;
+      margin: 0;
+      height: 0;
+    }
+  }
+  .btn {
+    transition: background-color 0.3s ease;
+    background-color: #005fa3;
+    border-radius: 6px;
+    padding: 10px 20px;
+    color: #f7f7f7;
+    font-size: 1rem;
+    cursor: pointer;
+    border: none;
+    &:hover {
+      background-color: #0077ccb5;
+    }
   }
 
   @media (max-width: 1200px) {
@@ -171,7 +204,6 @@ body {
     .second-card-body {
       justify-content: center;
       width: 100%;
-      gap: 15px;
       .second-card {
         .second-img {
           height: 90px;
@@ -211,10 +243,10 @@ body {
       transition: background-color 0.3s ease;
 
       i {
+        transition: color 0.3s ease;
         width: 28px;
         height: 28px;
         color: #0077cc;
-        transition: color 0.3s ease;
       }
 
       &:hover {
@@ -574,8 +606,9 @@ body {
       flex-direction: column;
       text-decoration: none;
       align-items: center;
-      user-select: none;
       margin: 10px 5px 0;
+      user-select: none;
+
       color: #222;
       display: flex;
 
@@ -600,6 +633,7 @@ body {
         text-decoration: none;
         align-items: center;
         user-select: none;
+        font-size: 15px;
         color: #222;
         display: flex;
 
